--- a/_posts/2016-4-29-كيف-أقوم-بتثبيت-لغة-Go-؟.markdown
+++ b/_posts/2016-4-29-كيف-أقوم-بتثبيت-لغة-Go-؟.markdown
@@ -6,7 +6,11 @@ tags: برمجة تثبيت go install جو
 ---
 
 جو هى لغة برمجة مفتوحة المصدر تقوم بتسهيل بناء برمجيات بسيطة ذات كفاءة عالية. والبعض يًطلق عليها سي الحديثة (modern c).
+
 في هذه المقالة الصغيرة سوف نقوم سويًا بتثبيت لغة go.
+
+{: .text-center}
+![gologo]({{ site.url }}/assets/posts/golang.png)
 
 تثبيت لغة جو علي نظام ماك osx
 ----
